# arkora

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  EXPLAINER.md  LICENSE  QA.md  README.md  SECURITY.md  drizzle.config.ts  eslint.config.mjs  instrumentation-client.ts  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
.github/: CODEOWNERS  ISSUE_ROOMS_FEATURE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
__tests__/: agentAuth.test.ts  agentkit-storage.test.ts  crypto.test.ts  karma.test.ts  rateLimit.test.ts  sanitize.test.ts  utils.test.ts
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
cli/: package.json  pnpm-lock.yaml  tsconfig.json
cli-rust/: Cargo.toml
cli-rust/src/: api.rs  config.rs  main.rs  theme.rs
cli-rust/src/commands/: boards.rs  feed.rs  login.rs  me.rs  mod.rs  notifications.rs  post.rs  reply.rs  search.rs  stats.rs  view.rs  vote.rs
contracts/: ArkVotes.sol  ArkoraNullifierRegistry.sol
drizzle/: 0005_identity_isolation.sql
e2e/: api-boards.spec.ts  api-posts.spec.ts  api-search.spec.ts  feed.spec.ts  health.spec.ts
hooks/: useFeed.ts  useMentionAutocomplete.ts  usePost.ts  useSearch.ts  useT.ts  useTip.ts  useVerification.ts  useVote.ts
lib/: agentAuth.ts  apiKeyAuth.ts  authFetch.ts  boards.ts  cache.ts  chain.ts  constants.ts  contracts.ts  env.ts  fonts.ts  geo.ts  identityRules.ts  karma.ts  (+14 more)
(+243 files in other folders)
